# structura

./: .gitignore  Cargo.toml  README.md
crates/calibration/: Cargo.toml
crates/calibration/src/: apriltag.rs  chessboard.rs  detector.rs  homography.rs  lib.rs  matching.rs  service.rs  types.rs  zhang.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: camera.rs  error.rs  lib.rs  math.rs  pose.rs
crates/feature/: Cargo.toml
crates/feature/src/: aliked_onnx.rs  descriptor.rs  lib.rs  lightglue_onnx.rs  matching.rs  sift.rs  xfeat.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: camera.rs  epnp.rs  homography.rs  lib.rs  point.rs  triangulation.rs  two_view.rs
crates/rerun/: Cargo.toml
crates/rerun/src/: cloud.rs
crates/sfm/: Cargo.toml
crates/sfm/src/: ba.rs  bundle_adjustment.rs  geometry.rs  incremental.rs  lib.rs  service.rs  triangulation.rs  types.rs
crates/sfm/tests/: dino_sift_dataset.rs
crates/solver/: Cargo.toml
crates/solver/src/: bundle_adjustment.rs  calibration.rs  lib.rs
crates/solver/src/residuals/: mod.rs  reprojection.rs
crates/solver/tests/: chessboard_data_cal.rs  chessboard_integration.rs
models/: xfeat_backbone.onnx  xfeat_fine_matcher.onnx  xfeat_fine_matcher.onnx.data
