[workspace]
members = [
    "crates/calibration",
    "crates/sfm",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
factrs = "0.3.0"
image = { version = "0.25", default-features = true }
ndarray = "0.17.2"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }
rayon = "1.11"
kornia = "0.1.10-rc.3"
chess-corners = "0.5.0"