[package]
name = "structura-calibration"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chess-corners.workspace = true
kornia.workspace = true
kornia-apriltag.workspace = true
nalgebra.workspace = true
structura-geometry = { path = "../geometry" }

[dev-dependencies]
approx = "0.5"
